--- a/html/index.html
+++ b/html/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="event__contents">
-                        <p class="event__label">Event 2</p>
+                        <p class="event__label" style="background-color: #A58768;">Event 2</p>
                         <h3 class="event__title event__title--sub">금액대별 구매 사은품</h3>
                         <div class="event__box" style="background-color: #FAF9F7;">
                             <span class="event__box-label">Gift</span>
@@ -158,7 +158,10 @@
                         <ul class="brand__list">
                             <li class="brand__item">
                                 <a href="" target="_blank" title="아이오페. Open new window">
-                                    <img src="/assets/event1.jpg" alt="아이오페" class="brand__image">
+                                    <div class="brand__image">
+                                        <img src="/assets/event1.jpg" alt="아이오페">
+                                        <img src="/assets/event1.jpg" alt="아이오페 로고" class="logo">
+                                    </div>                                    
                                     <p class="brand__item-title">아이오페</p>
                                 </a>
                             </li>
