--- a/html/index_02.html
+++ b/html/index_02.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, viewport-fit=cover, user-scalable=no">
-        <title>현대면세점 IOPE 프로모션</title>
+        <title>현대면세점 정관장 프로모션</title>
         <link rel="stylesheet" href="../css/common/reset.css">
         <link rel="stylesheet" href="../css/common/swiper-bundle.min.css">
         <link rel="stylesheet" href="../css/style.css">        
@@ -23,11 +23,11 @@
                     </div>
                     <div>사은행사</div>
                     <div>
-                      <strong class="">아이오페 단독 프로모션</strong>
+                      <strong class="">정관장 신상품 출시 기념 역대급 혜택</strong>
                       <div class="box_list" >
                         <ul>
-                            <li class="curr"><a href="index.html" target="_blank" title="아이오페 단독 프로모션. Open new window ">아이오페 단독 프로모션</a></li>
-                          <li><a href="index_02.html" target="_blank" title="정관장 신상품 출시 기념 역대급 혜택. Open new window ">정관장 신상품 출시 기념 역대급 혜택</a></li>
+                          <li><a href="index.html" target="_blank" title="아이오페 단독 프로모션. Open new window ">아이오페 단독 프로모션</a></li>
+                          <li class="curr"><a href="index_02.html" target="_blank" title="정관장 신상품 출시 기념 역대급 혜택. Open new window ">정관장 신상품 출시 기념 역대급 혜택</a></li>
                           <li><a>구매금액별</a></li>
                           <li><a>구매금액별</a></li>
                           <li><a>구매금액별</a></li>
@@ -47,15 +47,15 @@
                 </article>
               </div>
             <!-- Hero Section -->
-            <section class="promotion" aria-labelledby="promotion-title">
+            <section class="promotion" style="background-color: #FDEACA;" aria-labelledby="promotion-title">
                 <div class="promotion__inner">
                     <div class="promotion__headline">
                         <p class="promotion__subtitle">2025.01.01 - 재고소진시까지</p>
-                        <h1 id="promotion-title" class="promotion__title">아이오페 단독 프로모션</h1>
-                        <h4 class="promotion__description">현대면세점 단독 혜택도 만나보세요!</h4>
+                        <h1 id="promotion-title" class="promotion__title">정관장 신상품 출시 기념 역대급 혜택</h1>
+                        <h4 class="promotion__description">에브리타임 배/ 한라봉 플레이버 출시</h4>
                     </div>            
                     <div class="promotion__image">
-                        <img src="../assets/images/promotion-visual_01.jpg" alt="IOPE 제품 프로모션 이미지">
+                        <img src="../assets/images/promotion-visual_02.jpg" alt="IOPE 제품 프로모션 이미지">
                     </div>  
                 </div>
                            
@@ -76,15 +76,61 @@
                     </ul>
                 </div>
                 <div class="event__block tabpanel"  id="tabpanel-1" role="tabpanel" aria-labelledby="tab-1" >
-                    <div class="event__inner">
-                        <div class="event__headline">
-                            <h2 class="event__title">현대면세점 EXCLUSIVE 혜택</h2>
-                            <p class="event__subtitle">현대면세점에서만 드리는 기적같은 혜택</p>
-                        </div>                    
+                    <div class="event__inner">          
                         <div class="event__contents">
-                            <p class="event__label" style="background-color: #A58768;">Event 1</p>
-                            <h3 class=" event__title--sub">현대면세점 x IOPE 단독 행사</h3>
-                            <p class="event__desc">이벤트 기간 2025.01.01 ~ 2024.01.08</p>
+                            <p class="event__label" style="background-color: #FFB546;">Event 1</p>
+                            <h3 class=" event__title--sub">정관장 신상품 출시기념 사은행사</h3>
+                            <p class="event__desc">에브리타임 배/한라봉 플레이버(택1) 포함 $300 이상 구매 시 (일반 소비자가 150만원 상당)</p>
+                            <ul class="event__product">
+                                <li class="product__item">
+                                    <a href=""> 
+                                        <div class="product__item-image">
+                                            <img src="https://cdn.hddfs.com/files/goos/0758/20231020/db7566dd.jpg?sf=webp&amp;RS=340X340" alt="페이셜 트리트먼트 에센스 250ml">
+                                            <div class="on_btn">
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1">로그인</button>
+                                                </div>
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1 bg_black buyBtn">바로구매</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn-cart">장바구니 담기</button>
+                                        </div>
+                                        <div class="product__item-spec">
+                                            <p class="product__item-title">바비브라운</p>
+                                            <p class="product__item-desc">상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄</p>
+                                            <p class="price1"><strong>40%</strong> <del>$39</del></p>
+                                            <p class="price2">
+                                            <strong data-price="21.25">$21.25</strong> 
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>   
+                                <li class="product__item">
+                                    <a href=""> 
+                                        <div class="product__item-image">
+                                            <img src="https://cdn.hddfs.com/files/goos/0758/20231020/db7566dd.jpg?sf=webp&amp;RS=340X340" alt="페이셜 트리트먼트 에센스 250ml">
+                                            <div class="on_btn">
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1">로그인</button>
+                                                </div>
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1 bg_black buyBtn">바로구매</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn-cart">장바구니 담기</button>
+                                        </div>
+                                        <div class="product__item-spec">
+                                            <p class="product__item-title">바비브라운</p>
+                                            <p class="product__item-desc">상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄</p>
+                                            <p class="price1"><strong>40%</strong> <del>$39</del></p>
+                                            <p class="price2">
+                                            <strong data-price="21.25">$21.25</strong> 
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>          
+                            </ul>
                             <div class="event__box" style="background-color: #FAF9F7;">
                                 <span class="event__box-label">Gift</span>
                                 <ul role="list">
@@ -95,7 +141,7 @@
                                                 <img src="../assets/images/event1-01.png" alt="더 클린랩 에이씨 듀 칼라민 토너 + 에센스 + 크림 + 진정 패드 증정" >
                                             </div>                                        
                                             <div class="event__box-content">
-                                                <p class="event__box-title" style="color: #A58768;">$60이상 구매시 </p>
+                                                <p class="event__box-title" style="color: #FFB546;">$60이상 구매시 </p>
                                                 <p class="event__box-info">더 클린랩 에이씨 듀 칼라민 토너 + 에센스 + 크림 + 진정 패드 증정 증정</p>
                                             </div>
                                         </a>
@@ -105,8 +151,83 @@
                             </div>
                         </div>
                         <div class="event__contents">
-                            <p class="event__label" style="background-color: #A58768;">Event 2</p>
-                            <h3 class="event__title event__title--sub">금액대별 구매 사은품</h3>
+                            <p class="event__label" style="background-color: #FFB546;">Event 2</p>
+                            <h3 class="event__title event__title--sub">행사상품 동시구매 시 사은품 증정</h3>
+                            <p class="event__desc">홍삼정 에브리타임로얄 면세에디션(100포) + 에브리타임 배/한라봉(택1) 동시 구매 시 </p>
+                            <ul class="event__product">
+                                <li class="product__item">
+                                    <a href=""> 
+                                        <div class="product__item-image">
+                                            <img src="https://cdn.hddfs.com/files/goos/0758/20231020/db7566dd.jpg?sf=webp&amp;RS=340X340" alt="페이셜 트리트먼트 에센스 250ml">
+                                            <div class="on_btn">
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1">로그인</button>
+                                                </div>
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1 bg_black buyBtn">바로구매</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn-cart">장바구니 담기</button>
+                                        </div>
+                                        <div class="product__item-spec">
+                                            <p class="product__item-title">바비브라운</p>
+                                            <p class="product__item-desc">상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄</p>
+                                            <p class="price1"><strong>40%</strong> <del>$39</del></p>
+                                            <p class="price2">
+                                            <strong data-price="21.25">$21.25</strong> 
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>   
+                                <li class="product__item">
+                                    <a href=""> 
+                                        <div class="product__item-image">
+                                            <img src="https://cdn.hddfs.com/files/goos/0758/20231020/db7566dd.jpg?sf=webp&amp;RS=340X340" alt="페이셜 트리트먼트 에센스 250ml">
+                                            <div class="on_btn">
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1">로그인</button>
+                                                </div>
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1 bg_black buyBtn">바로구매</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn-cart">장바구니 담기</button>
+                                        </div>
+                                        <div class="product__item-spec">
+                                            <p class="product__item-title">바비브라운</p>
+                                            <p class="product__item-desc">상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄</p>
+                                            <p class="price1"><strong>40%</strong> <del>$39</del></p>
+                                            <p class="price2">
+                                            <strong data-price="21.25">$21.25</strong> 
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>  
+                                 <li class="product__item">
+                                    <a href=""> 
+                                        <div class="product__item-image">
+                                            <img src="https://cdn.hddfs.com/files/goos/0758/20231020/db7566dd.jpg?sf=webp&amp;RS=340X340" alt="페이셜 트리트먼트 에센스 250ml">
+                                            <div class="on_btn">
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1">로그인</button>
+                                                </div>
+                                                <div class="on_btn_group">
+                                                    <button class="btn_inner1 bg_black buyBtn">바로구매</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn-cart">장바구니 담기</button>
+                                        </div>
+                                        <div class="product__item-spec">
+                                            <p class="product__item-title">바비브라운</p>
+                                            <p class="product__item-desc">상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄 상품명 최대 2줄</p>
+                                            <p class="price1"><strong>40%</strong> <del>$39</del></p>
+                                            <p class="price2">
+                                            <strong data-price="21.25">$21.25</strong> 
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>          
+                            </ul>
                             <div class="event__box" style="background-color: #FAF9F7;">
                                 <span class="event__box-label">Gift</span>
                                 <ul role="list">
@@ -116,7 +237,7 @@
                                                 <img src="../assets/images/event1-02.png" alt="슈퍼 바이탈 세럼 크림 듀어 샘플" class="event__image">
                                             </div>                                         
                                             <div class="event__box-content">
-                                                <p class="event__box-title" style="color: #A58768;">$1이상 구매시 </p>
+                                                <p class="event__box-title" style="color: #FFB546;">$1이상 구매시 </p>
                                                 <p class="event__box-info">슈퍼 바이탈 세럼 크림 듀어 샘플 증정</p>
                                             </div>
                                         </a>
@@ -127,19 +248,8 @@
                                                 <img src="../assets/images/event1-03.png" alt="슈퍼 바이탈 에멀전 18ml + 소프너 18ml">
                                             </div>                                        
                                             <div class="event__box-content">
-                                                <p class="event__box-title" style="color: #A58768;">$50이상 구매시 </p>
+                                                <p class="event__box-title" style="color: #FFB546;">$50이상 구매시 </p>
                                                 <p class="event__box-info">슈퍼 바이탈 에멀전 18ml + 소프너 18ml 증정</p>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li role="listitem">
-                                        <a href="" target="_blank" title="슈퍼 바이탈 5 종 . Open new window ">
-                                            <div class="event__image">
-                                                 <img src="../assets/images/event1-04.png" alt="슈퍼 바이탈 5 종 증정">
-                                            </div>  
-                                            <div class="event__box-content">
-                                                <p class="event__box-title" style="color: #A58768;"> $80이상 구매시 </p>
-                                                <p class="event__box-info">슈퍼 바이탈 5 종 증정</p>
                                             </div>
                                         </a>
                                     </li>
