--- a/html/index.html
+++ b/html/index.html
@@ -864,6 +864,7 @@
           </ul>
 
           </div>
+        </div>
         <script type="text/javascript" src="../js/common.js"></script>
     </body>
 </html>
