--- a/html/index_02.html
+++ b/html/index_02.html
@@ -974,6 +974,7 @@
           </ul>
 
           </div>
+        </div>
         <script type="text/javascript" src="../js/common.js"></script>
     </body>
 </html>
